<resources>
    <string name="app_name">温商博客</string>
    <string name="app_title">温商博客</string>
    <string name="app_login">登录</string>
    <string name="forget">忘记密码？</string>
    <string name="register">注册</string>
    <string name="justlool">随便看看</string>
    <string name="hint">手机号|昵称</string>
    <string name="pwd_hint">密码</string>
    <string name="nickname">你的昵称</string>
    <string name="phone_num">你的手机号</string>
    <string name="to_login">已有账户登录</string>
    <string name="get_code">发送验证码</string>
    <string name="code_hint">输入验证码</string>
    <string name="welcome_title">创作你的创作</string>
    <string name="welcome_info">一个优质创作社区</string>
    <string name="retrieve_pwd">重置密码</string>
    <string name="new_pwd">请输入新的密码</string>
    <string name="new_pwd_again">请再次输入新的密码</string>
    <string name="phone_edt">请输入你的手机号</string>
    <string name="get_code_again">重发</string>
    <string name="done">完成</string>
    <string name="uploading">上传</string>
    <string name="tv_title">请输入标题</string>
    <string name="focus">+ 关注</string>
    <string name="focused">已关注</string>
    <string name="article_info">· 著作权归作者所有</string>
    <string name="article_time">发布于 2018-12-11 </string>
    <string name="comments_text">说点什么吧</string>
    <string name="release">发布</string>
    <string name="comments">评论</string>
    <string name="comments_msg">这是一条没有用的评论</string>
    <string name="reply">回 复</string>
    <string name="comments_time">2018-12-11</string>
    <string name="save_article">保存</string>
    <string name="message">我的草稿</string>
    <string name="callme">我的资料</string>
    <string name="setting">设置</string>
    <string name="update">我的文章</string>
    <string name="drafts_count">(8)</string>
    <string name="mag">015年2月1日，阿里巴巴集团宣布成立十亿港元的香港青年企业家基金，该基金为非牟利性质。 [39]  2015年2月9日，阿里巴巴集团宣布以5.9亿美元战略投资魅族科技，未透露具体持股比例。 [40]  2015年2月10日，阿里巴巴集团宣布与蚂蚁金服集团完成重组，蚂蚁金服为支付宝的母公司。 [41]  2015年3月11日，阿里巴巴集团宣布旗下全球批发贸易平台和英国创新借贷机构ezbob及iwoca达成战略合作，协助英国中小企业在向平台上的中国供应商购买货物时，可更方便获得营运资金。 2015年4月15日，阿里巴巴集团宣布和香港上市的阿里健康信息技术有限公司达成最终协议。根据协议，阿里巴巴集团将转让天猫在线医药业务的营运权给予阿里健康，以换取阿里健康新发行的股份和可转股债券，阿里健康将成为阿里巴巴集团的子公司。 [42]  2015年5月14日，阿里巴巴集团宣布，已联手云锋基金对国内主要物流快递企业圆通进行战略投资。 [43]  2015年6月4日，阿里巴巴集团与上海文广集团（SMG）联合宣布，将共同把SMG旗下的第一财经传媒有限公司打造成新型数字化财经媒体与信息服务集团，阿里将投资12亿元人民币参股第一财经，开拓数据服务领域。 [44]  2015年6月18日，日本软银集团、阿里巴巴集团及富士康科技集团共同宣布，阿里巴巴、富士康将向软银旗下软银机器人控股公司分别注资145亿日元，在完成注资后，阿里巴巴及富士康将分别持有SBRH 20%股份，软银则将持有60%股份。 [45]  2015年6月23日，阿里巴巴集团与蚂蚁金融服务集团联合宣布，双方将合资成立一家本地生活服务平台公司，合资公司名为“口碑”，双方各自注资30亿元，共60亿元，各占股50%。 [46]  2015年7月8日，阿里巴巴宣布逾亿美元战略投资魅力惠，共同打造奢品闪购电商平台魅力惠。交易完成后，阿里巴巴将在旗下天猫平台成立一支服务团队，支持魅力惠的快速发展。 [47]  2015年7月15日，阿里巴巴集团宣布成立阿里音乐集团，高晓松出任董事长，宋柯出任CEO。 [48]  2015年7月16日，阿里巴巴集团旗下移动开放平台阿里百川宣布，将提供“10亿创投+10亿贷款”，用以扶持移动应用创业者。 [49]  2015年7月20日，阿里巴巴集团与联合利华签署战略合作协议，帮后者将产品销售给更多的中国客户。 [50]  2015年7月29日，阿里巴巴集团宣布对旗下阿里云战略增资60亿元，用于国际业务拓展，云计算、大数据领域基础和技术的研发，以及DT生态体系的建设。 [51]  2015年8月10日，阿里巴巴集团与苏宁云商集团股份有限公司共同宣布达成全面战略合作。根据协议，阿里巴巴集团将投资约283亿元人民币参与苏宁云商的非公开发行，占发行后总股本的19.99%，成为苏宁云商的第二大股东。与此同时，苏宁云商将以140亿元人民币认购不超过2780万股的阿里巴巴新发行股份。 [52]  2015年8月12日，阿里巴巴集团与美国百货零售巨头梅西百货共同宣布，双方正式达成长期独家战略合作。梅西百货将入驻天猫国际。 [53]  2015年9月8日，阿里巴巴集团与全球领先的零售贸易集团麦德龙宣布达成独家战略合作，麦德龙官方旗舰店将入驻天猫国际。作为德国最大的零售贸易集团，麦德龙将和阿里巴巴联手，在商品供应链，跨境电商和大数据方面紧密合作，成为阿里欧洲战略的重要合作伙伴。 [54]  2015年9月10日，阿里巴巴集团荣膺2015年世界零售大会（World Retail Congress）最高奖项“年度最佳零售商”（retailer of the year）。 [55]  2015年9月24日，阿里巴巴集团宣布启动“杭州+北京”双中心战略，并将以北京为大本营，高强度推进在中国北方地区的战略执行和业务发展。 [56]  2015年9月24日，斯坦福商学院校友会宣布，2015年ENCORE奖授予阿里巴巴集团。这是ENCORE奖第一次颁给中国公司，阿里巴巴集团是ENCORE奖历史上第38个获奖的公司，也是全球第一个获奖的非美国本土公司。 [57]  2015年10月13日，阿里巴巴集团CEO张勇宣布，2015年双11指挥部将移师北京，在北京设置双11指挥部。 [58]  2015年10月16日，阿里巴巴集团宣布，已向优酷土豆公司董事会发出非约束性要约，拟以每ADS（美国存托凭证）26.60美元的价格，现金收购除阿里巴巴集团已持有优酷土豆股份外，该公司剩余的全部流通股。 [59-60]  2015年11月3日晚，阿里巴巴集团与河北省人民政府在石家庄签署了“互 联网+扶贫”合作备忘录。双方商定，将充分发挥阿里巴巴集团在互联网经济领域的立体化产业发展优势和影响力，在“互联网+扶贫”领域开展深入合作，实现优势互补、共同发展。 [61]  2015年11月6日，阿里巴巴集团和优酷土豆集团宣布，双方已经就收购优酷土豆股份签署并购协议，根据这一协议，阿里巴巴集团将收购优酷土豆集团。这项交易将以全现金形式进行。 [62]  2015年11月11日，阿里巴巴双11购物狂欢节当天交易量达到912.17亿元人民币，比2014年双11成交额提升近60%，而2009年阿里巴巴第一次双11的销售额5200万元人民币。这次双11阿里巴巴将申请坚果、牛奶、蜂蜜、汽车、手表、手机等八项吉尼斯世界纪录。 [63]  2015年11月12日，阿里巴巴入选MSCI中国指数。 [64]  2015年11月27日，中国五矿集团旗下五矿发展股份有限公司与阿里巴巴集团旗下杭州阿里创业投资有限公司（简称阿里投创）联合宣布，双方达成协议共同向五矿发展下属子公司五矿电子商务有限公司（简称五矿电商）进行增资，共同打造钢铁交易B2B平台。 [65]</string>
    <string name="no_more_msg">没有更多的内容了</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_delete">删除</string>
    <string name="read_menu">删除全部</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="take_photo">拍照</string>
    <string name="my_photos">图库</string>
</resources>
