<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <ImageView
        android:id="@+id/h_back"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/image_head"
        android:scaleType="fitXY"/>


    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/author_head_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/image_head"
        app:riv_border_color="#333333"
        app:riv_border_width="1dp"
        app:riv_corner_radius="40dp"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        app:riv_tile_mode="clamp"
        android:layout_above="@+id/message"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp" />

    <RelativeLayout
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/h_back"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/user_line"
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/user_line"
            android:textSize="17sp"
            android:textColor="@color/colorPrimary"
            android:text="张三"/>

        <TextView
            android:id="@+id/user_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="17sp"
            android:textColor="@color/colorPrimary"
            android:layout_toRightOf="@id/user_line"
            android:text="182****5882"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/h_back"
        android:paddingLeft="15dp">
        <RelativeLayout
            android:id="@+id/setting"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bottom_border">
            <ImageView
                android:id="@+id/p1"
                android:src="@drawable/message"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/my_drafts"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/message"
                android:layout_marginLeft="70dp"
                android:textSize="20sp"
                android:gravity="center"

                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/setting1"
            android:layout_below="@id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_border"
            >
            <ImageView
                android:id="@+id/p2"
                android:src="@drawable/call"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/callme"
                android:layout_marginLeft="70dp"
                android:textSize="20sp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/setting2"
            android:layout_marginTop="5dp"
            android:layout_below="@id/setting1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_border"
            android:layout_marginBottom="5dp"
            >
            <ImageView
                android:id="@+id/p3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/setting" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/setting"
                android:layout_marginLeft="70dp"
                android:textSize="20sp"
                android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/setting3"
            android:layout_below="@id/setting2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_border"
            >
            <ImageView
                android:id="@+id/p4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:src="@drawable/myupload"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/update"
                android:layout_marginLeft="70dp"
                android:textSize="20sp"
                android:gravity="center"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
