<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="5dp"
            android:background="@drawable/back" />

        <Button
            android:id="@+id/save"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/darkblue_border_radius"
            android:text="@string/save_article"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginRight="80dp"/>

        <Button
            android:id="@+id/uploading"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/darkblue_border_radius"
            android:text="@string/uploading"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:hint="@string/tv_title"
        android:textSize="25sp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

        <jp.wasabeef.richeditor.RichEditor
            android:id="@+id/editor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:background="#ffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="HTML Preview"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"

        android:background="#EEEEEE"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_inset"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_image" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="A"
                android:textColor="#999999"
                android:textSize="23dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="H"
                android:textColor="#999999"
                android:textSize="23dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_palette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_palette"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_palette" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_mark" />
        </LinearLayout>
        <ImageButton
            android:id="@+id/action_undo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/undo_select"
            android:contentDescription="@null" />
    </LinearLayout>

</RelativeLayout>